--- a/build.gradle
+++ b/build.gradle
@@ -155,6 +155,15 @@ repositories {
     // flatDir {
     //     dir 'libs'
     // }
+
+    maven {
+        name = 'enginehub-maven'
+        url = 'https://maven.enginehub.org/repo/'
+
+     //   content {
+            //includeGroup "com.sk89q.worldedit"
+     //   }
+    }
 }
 
 dependencies {
@@ -167,6 +176,8 @@ dependencies {
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
     // runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}") // Adds the full JEI mod as a runtime dependency
     // implementation fg.deobf("com.tterrag.registrate:Registrate:MC${mc_version}-${registrate_version}") // Adds registrate as a dependency
+
+    implementation "com.sk89q.worldedit:worldedit-core:7.3.0-SNAPSHOT"
 
     // Examples using mod jars from ./libs
     // implementation fg.deobf("blank:coolmod-${mc_version}:${coolmod_version}")
