--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -50,9 +50,9 @@ Building schematics block by block
     side="BOTH"
 # Here's another dependency
 [[dependencies.schematicitems]]
-    modId="minecraft"
+    modId="worldedit"
     mandatory=true
 # This version range declares a minimum of the current minecraft version up to but not including the next major version
-    versionRange="[1.19.2,)"
+    versionRange="[7.2.12,)"
     ordering="NONE"
     side="BOTH"
